--- a/src/app/waset-qrcode/waset-qrcode.component.html
+++ b/src/app/waset-qrcode/waset-qrcode.component.html
@@ -1,51 +1,85 @@
+<header class="header">
+    <div class="header-logo">
+        <img src="../../assets/freelance_logo_white.svg" alt="logo" class="header-img">
+        <button class="menu-button">
+            <span class="menu-icon">☰</span>
+        </button>
+    </div>
+</header>
+
 <div class="document-container">
+    <div class="title">
+        <h2 class="document-title">معلومات الوثيقة</h2>
+        <button class="status-btn">سارية</button>
+    </div>
     <div class="document-field">
         <label class="document-label">الفئة</label>
         <div class="document-value">الخدمات التخصصية</div>
     </div>
-
     <div class="document-field">
         <label class="document-label">رقم الوثيقة</label>
         <div class="document-value">FL-264867894</div>
     </div>
-
     <div class="document-field">
         <label class="document-label">الاسم</label>
-        <div class="document-value">مؤسسة وسيط لخدمات التعميد فردية مسؤولية شخص واحد</div>
+        <div class="document-value">مؤسسة وسيط لخدمات التعميد منصة فردية مسؤولية شخص واحد</div>
     </div>
-
     <div class="document-field">
         <label class="document-label">المهنة</label>
         <div class="document-value">وسيط للتعميد</div>
     </div>
-
     <div class="document-field">
         <label class="document-label">تاريخ الاصدار</label>
-        <div class="document-value">May 9, 2022</div>
+        <div class="document-value">May 9, 2023</div>
     </div>
-
     <div class="document-field">
         <label class="document-label">الانتهاء</label>
         <div class="document-value">May 9, 2029</div>
     </div>
-
     <div class="document-field">
         <label class="document-label">الحساب البنكي</label>
         <div class="document-value">الحساب البنكي</div>
     </div>
-
     <div class="document-field">
         <label class="document-label">الموقع الالكتروني</label>
         <div class="document-value">الموقع الالكتروني</div>
     </div>
-
     <p class="description">
-        هذه البيانات تؤكد تسجيل الفرد كمستقل في نظام وزارة الموارد البشرية والتنمية الاجتماعية
-        دون مسؤولية أو ضمانات من الوزارة للمهارات في المهن المذكورة.
+        هذه البيانات تؤكد تسجيل الفرد كمستقل في نظام وزارة الموارد البشرية والتنمية الاجتماعية دون مسؤولية أو ضمانات من
+        الوزارة للمهارات في المهن المذكورة.
     </p>
-
     <p class="description fw-bold">
-        تم إصدار وثيقة العمل الحر بعد استيفاء المتطلبات المحددة من الجهة المختصة لممارسة المهنة
-        الواردة بموجبها في حال وجود جهات اختصاص.
+        تم إصدار وثيقة العمل الحر بعد استيفاء المتطلبات المحددة من الجهة المختصة لممارسة المهنة الواردة بموجبها في حال
+        وجود جهات اختصاص.
     </p>
 </div>
+
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-left">
+            <img src="../../assets/footer_statement.avif" alt="Future Work Logo" class="footer-img">
+        </div>
+        <div class="footer-center">
+            <h2>الأسئلة الشائعة</h2>
+            <p>منصة العمل المرن - منصة العمل عن بعد</p>
+            <p>© 2024 جميع الحقوق محفوظة</p>
+            <p>v2.0.0</p>
+            <div class="footer-links">
+                <a href="#">سياسة الخصوصية</a>
+                <span>|</span>
+                <a href="#">شروط الاستخدام</a>
+                <span>|</span>
+                <a href="#">تواصل معنا</a>
+                <p>مركز الاتصال: 920002654</p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-x-twitter"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
