--- a/src/app/waset-qrcode/waset-qrcode.component.html
+++ b/src/app/waset-qrcode/waset-qrcode.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="document-field">
         <label class="document-label">الاسم</label>
-        <div class="document-value">مؤسسة وسيط لخدمات التعميد منصة فردية مسؤولية شخص واحد</div>
+        <div class="document-value">منصة وسيط لخدمات التعميد منصة فردية مسؤولية شخص واحد</div>
     </div>
     <div class="document-field">
         <label class="document-label">المهنة</label>
@@ -34,7 +34,7 @@
     </div>
     <div class="document-field">
         <label class="document-label">الانتهاء</label>
-        <div class="document-value">May 9, 2029</div>
+        <div class="document-value">May 9, 2026</div>
     </div>
     <div class="document-field">
         <label class="document-label">الحساب البنكي</label>
