--- a/src/app/waset-qrcode/waset-qrcode.component.html
+++ b/src/app/waset-qrcode/waset-qrcode.component.html
@@ -25,16 +25,16 @@
         <div class="document-value">منصة وسيط لخدمات التعميد منصة فردية مسؤولية شخص واحد</div>
     </div>
     <div class="document-field">
-        <label class="document-label">المهنة</label>
+        <label class="document-label">ضمان الحقوق</label>
         <div class="document-value">وسيط للتعميد</div>
     </div>
     <div class="document-field">
         <label class="document-label">تاريخ الاصدار</label>
-        <div class="document-value">May 9, 2023</div>
+        <div class="document-value">9 مايو 2023</div>
     </div>
     <div class="document-field">
         <label class="document-label">الانتهاء</label>
-        <div class="document-value">May 9, 2026</div>
+        <div class="document-value">9 مايو 2026</div>
     </div>
     <div class="document-field">
         <label class="document-label">الحساب البنكي</label>
