--- a/src/app/waset-qrcode/waset-qrcode.component.html
+++ b/src/app/waset-qrcode/waset-qrcode.component.html
@@ -25,8 +25,8 @@
         <div class="document-value">منصة وسيط لخدمات التعميد منصة فردية مسؤولية شخص واحد</div>
     </div>
     <div class="document-field">
-        <label class="document-label">ضمان الحقوق</label>
-        <div class="document-value">وسيط للتعميد</div>
+        <label class="document-label">المهنة</label>
+        <div class="document-value">ضمان الحقوق</div>
     </div>
     <div class="document-field">
         <label class="document-label">تاريخ الاصدار</label>
