edit home and icon

--- a/src/app/waset-qrcode/waset-qrcode.component.html
+++ b/src/app/waset-qrcode/waset-qrcode.component.html
@@ -13,6 +13,10 @@
         <button class="status-btn">سارية</button>
     </div>
     <div class="document-field">
+        <label class="document-label">الجهة الاشرافية </label>
+        <div class="document-value">وزارة الموارد البشرية والتنمية الاجتماعية</div>
+    </div>
+    <div class="document-field">
         <label class="document-label">الفئة</label>
         <div class="document-value">الخدمات التخصصية</div>
     </div>
